--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -40,11 +40,11 @@ iframe {
 }
 ::selection {
     background: #AAF2E4; /* Safari */
-    color: #506A85;
+    color: #000;
 }
 ::-moz-selection {
     background: #AAF2E4; /* Firefox */
-    color: #506A85;
+    color: #000;
 }
 body {
     font-family: 'Source Sans Pro', sans-serif;
@@ -100,7 +100,7 @@ h6 {
     font-family: 'Lato', sans-serif;
     font-weight: 700;
 	letter-spacing: 0.025em;
-    color: #506A85;
+    color: #000;
     margin-top: 0;
 	/*word-wrap: break-word;*/
 }
@@ -435,7 +435,7 @@ main header + * {
 	font-weight: 700;
 	line-height: 44px;
 	text-align: center;
-	color: #506A85;
+	color: #000;
 	margin: 6px 15px 0 0;
 }
 .dropcap-lg {
@@ -448,7 +448,7 @@ main header + * {
 	font-weight: 700;
 	line-height: 70px;
 	text-align: center;
-	color: #506A85;
+	color: #000;
 	margin: 6px 15px 0 0;
 }
 blockquote {
@@ -464,7 +464,7 @@ blockquote p {
 blockquote footer,
 blockquote small,
 blockquote .small {
-	color: #506A85;
+	color: #000;
 	font-size: 14px;
 	line-height: 150%;
 	font-weight: 700;
@@ -479,7 +479,7 @@ blockquote .small:after {
 	display: inline-block;
 	width: 20px;
 	height: 1px;
-	background-color: #506A85;
+	background-color: #000;
 	margin-bottom: .28em;
 }
 blockquote footer:before,
@@ -814,7 +814,8 @@ iframe + iframe {
     background-color: #F2F5F7;
 }
 .dark-bg {
-    background-color: #2F4052;
+    /*background-color: #2F4052;*/
+    background-color: #000;
 }
 .dark-bg,
 .dark-bg p,
@@ -850,7 +851,7 @@ iframe + iframe {
     color: #FFF;
 }
 .tint-bg a:hover {
-    color: #506A85;
+    color: #000;
 }
 .light-color,
 .light-color .dark-bg {
@@ -860,7 +861,7 @@ iframe + iframe {
 	color: #A3B1BF !important;
 }
 .dark-color {
-	color: #506A85 !important;
+	color: #000 !important;
 }
 .tint-color {
 	color: #1ABB9C !important;
@@ -959,7 +960,7 @@ footer .row .inner {
 }
 footer .logo {
 	height: auto;
-	max-height: 100%;
+	max-height: 55px;
 }
 footer h4 {
 	text-transform: uppercase;
@@ -986,7 +987,7 @@ footer p {
     display: none;
 }
 .footer-bottom {
-    background: #283645;
+    background: #FFFFFF;
 	color: #707E8C;
 }
 .footer-bottom .container.inner {
@@ -1037,7 +1038,7 @@ footer p {
 }
 .bordered .info h3 a,
 .bordered .info h4 a {
-    color: #506A85;
+    color: #000;
 }
 .bordered .info h3 a:hover,
 .bordered .info h4 a:hover {
@@ -1062,7 +1063,7 @@ footer p {
 .dark-bg .bordered .info h4,
 .tint-bg .bordered .info h3,
 .tint-bg .bordered .info h4 {
-	color: #506A85;
+	color: #000;
 }
 .dark-bg .bordered .info p,
 .tint-bg .bordered .info p {
@@ -1332,6 +1333,7 @@ aside .thumb figure {
 .navbar-brand img {
 	max-height: 40px;
 }
+
 .navbar-header .navbar-brand {
 	display: none;
 }
@@ -1380,7 +1382,7 @@ aside .thumb figure {
 	line-height: 20px;
     font-weight: 700;
     text-transform: uppercase;
-    color: #506A85;
+    color: #000;
     padding: 15px 20px;
 	border: 1px solid rgba(255,255,255,0);
 	border-bottom: none;
@@ -1720,7 +1722,7 @@ aside .thumb figure {
 }
 .tint-bg .btn:hover {
     background: #E9E9E9 !important;
-    color: #506A85 !important;
+    color: #000 !important;
 }
 .btn.share-facebook {
     background: #3d5b9b !important
@@ -2004,7 +2006,7 @@ p .btn {
 .tabs-side .tab a {
     display: block;
 	background: #F5F7FA;
-    color: #506A85;
+    color: #000;
 	font-size: 14px;
 	line-height: 130%;
 	font-weight: 700;
@@ -2090,7 +2092,7 @@ p .btn {
     display: inline-block;
 	vertical-align: bottom;
 	background: #F5F7FA;
-    color: #506A85;
+    color: #000;
 	font-size: 14px;
 	line-height: 130%;
 	font-weight: 700;
@@ -2165,7 +2167,7 @@ p .btn {
 	height: 130px;
 	max-width: 130px;
 	background: #FFF;
-    color: #506A85;
+    color: #000;
 	font-size: 14px;
 	line-height: 130%;
 	font-weight: 700;
@@ -2188,15 +2190,21 @@ p .btn {
 .tabs-circle-top .tab.active {
 	top: -15px;
 }
+
+.tab {
+
+}
 .tabs-circle-top .tab.active a {
 	height: 160px;
 	width: 160px;
 	max-width: 160px;
-    background: #1ABB9C;
+    /*background: #1ABB9C;*/
+    background: #f1c40f;
 	font-size: 15px;
 	line-height: 140%;
 	color: #FFF;
-	border: 1px solid #1ABB9C;
+	/*border: 1px solid #1ABB9C;*/
+	border: 1px solid #f1c40f;
 }
 .tabs-circle-top .tab.active a div {
 	font-size: 50px;
@@ -2260,7 +2268,7 @@ p .btn {
 .tabs-2-big-top .tab a {
     display: block;
 	padding: 35px;
-    color: #506A85;
+    color: #000;
 	opacity: .5;
 }
 .tabs-2-big-top .tab:hover {
@@ -2364,7 +2372,7 @@ blockquote:before {
 	background-color: #FFF;
 }
 .format-quote .meta a:hover {
-	color: #506A85;
+	color: #000;
 }
 
 
@@ -2413,14 +2421,14 @@ blockquote:before {
 }
 .panel-title > a.collapsed {
 	background: #F5F7FA;
-	color: #506A85;
+	color: #000;
 }
 .panel-title > a,
 .panel-title > a:hover {
 	background: #EDF0F2;
 }
 .panel-title > a {
-	color: #506A85;
+	color: #000;
 }
 .panel-title > a:hover {
 	color: #1ABB9C;
@@ -2429,7 +2437,7 @@ blockquote:before {
 	display: block;
 	position: relative;
 	top: 0;
-	color: #506A85;
+	color: #000;
 	padding-right: 25px;
 	-webkit-transition: all 200ms ease-out;
 	   -moz-transition: all 200ms ease-out;
@@ -2933,7 +2941,7 @@ blockquote:before {
 .item-details li:before {
 	content: "";
 	font-family: "fontello";
-    color: #506A85;
+    color: #000;
     margin-right: 10px;
 }
 .item-details li.date:before {
@@ -2990,7 +2998,7 @@ blockquote:before {
 	height: 30px;
 	font-size: 30px;
 	color: #FFF;
-	background-color: #506A85;
+	background-color: #000;
 	border: none;
 	-webkit-border-radius: 3px;
 	   -moz-border-radius: 3px;
@@ -3313,8 +3321,8 @@ blockquote:before {
 }
 #owl-main .caption h1.dark-bg span,
 #owl-main .caption p.dark-bg span {
-	background: #506A85;
-	box-shadow: -.500em 0 0 #506A85, .500em 0 0 #506A85;
+	background: #000;
+	box-shadow: -.500em 0 0 #000, .500em 0 0 #000;
 }
 #owl-main .caption h1.tint-bg span,
 #owl-main .caption p.tint-bg span {
@@ -3359,7 +3367,7 @@ blockquote:before {
 	display: block;
 	width: 15px;
 	height: 15px;
-	background: #506A85;
+	background: #000;
 	border: none;
 	-webkit-border-radius: 50%;
 			border-radius: 50%;
@@ -4046,7 +4054,7 @@ input:focus:-ms-input-placeholder {
     font-size: 14px;
 	font-weight: 700;
     line-height: 160%;
-	color: #506A85;
+	color: #000;
     margin-bottom: 5px;
 }
 .author a {
@@ -4145,7 +4153,7 @@ input:focus:-ms-input-placeholder {
     font-weight: 700;
 	line-height: 20px;
     text-transform: uppercase;
-    color: #506A85;
+    color: #000;
     padding: 13px 18px;
 }
 .sidenav li a:hover {
@@ -4352,7 +4360,7 @@ input:focus:-ms-input-placeholder {
 	font-size: 36px;
 	line-height: 100%;
 	color: #FFF;
-	background-color: #506A85;
+	background-color: #000;
 	padding: 3px;
 	-webkit-border-radius: 3px;
 	   -moz-border-radius: 3px;
