--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,3 +30,19 @@ span#basic-addon2 {
 div#myModal{
     margin-top: 100px;
 }
+
+div#modalCu{
+    margin-top: 100px;
+}
+
+.label-group {
+    padding: 6px 50px;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1;
+    text-align: center;
+    width: 1%;
+    white-space: nowrap;
+    vertical-align: middle;
+    display: table-cell;
+}
